# WhatsApp-Bot

./: .dockerignore  .env.example  .gitignore  Dockerfile  PROJECT_GUIDE.md  README.md  WhatsApp_Stock_Bot.postman_collection.json  celerybeat-schedule.bak  celerybeat-schedule.dir  docker-compose.yml  pyproject.toml  requirements-prod.txt  requirements.txt
app/: config.py  dependencies.py  main.py
app/api/: health.py
app/models/: announcement_model.py
app/repositories/: announcement_repo.py
app/schemas/: announcement_schema.py
app/services/: alert_service.py  bse_service.py  filter_service.py  llm_service.py  nse_service.py  summary_service.py  whatsapp_service.py
app/utils/: circuit_breaker.py  helpers.py  logger.py  security.py
app/workers/: celery_app.py  scheduler.py  tasks.py
infra/: database.py  redis.py
tests/: conftest.py  test_circuit_breaker.py  test_deduplication.py  test_filter_service.py  test_summary_service.py  test_whatsapp_service.py
