[project]
name = "whatsapp-stock-bot"
version = "1.0.0"
description = "Automated WhatsApp channel bot for NSE/BSE stock market announcements"
requires-python = ">=3.11"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["app", "infra"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["app"]
omit = ["tests/*", "app/workers/celery_app.py"]

[tool.coverage.report]
show_missing = true
fail_under = 60
